--- a/cadastro.html
+++ b/cadastro.html
@@ -14,7 +14,7 @@
         <h1>Cadastro de clientes</h1>
 
 
-        <form>
+        <form id="leadform">
 
             <label for="name">Nome</label>
             <input type="text"  id="name"   name="name" required>
@@ -49,6 +49,8 @@
     </div>
 
 
+
+        <script src="script.js"></script>
 
 
 </body>
